<resources>
    <string name="app_name">EGrammar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="categories">categories</string>
    <string name="all_idioms">All idioms [A-Z]</string>
    <string name="quizzes">Quizzes</string>
    <string name="phrasal">Phrasal Verbs</string>
    <string name="random">Random Idiom</string>
    <string name="title">Title</string>
    <string name="slang">Slang</string>
    <string name="proverbs">Proverbs</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
</resources>
