<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f20">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/lin_1"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:orientation="horizontal"
                android:padding="0dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/categories_background"
                    android:gravity="center"
                    android:orientation="vertical">


                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_internet" />


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin_2"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_below="@id/lin_1"
                android:orientation="horizontal"
                android:padding="0dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/quizzes_background"
                    android:gravity="center"
                    android:orientation="vertical">


                    <!--<android.support.v7.widget.AppCompatImageView
                        android:scaleType="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/ic_internet" />-->

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_target" />


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quizzes"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/quizzes_background"
                    android:gravity="center"
                    android:orientation="vertical">


                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_man_thinking" />


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phrasal"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin_3"
                android:layout_width="256dp"
                android:layout_height="120dp"
                android:layout_below="@id/lin_2"
                android:orientation="horizontal"
                android:padding="1dp">


                <RelativeLayout
                    android:id="@+id/rel_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/random_background">


                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_favorite_border_black_24dp" />


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_random"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/random"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_title"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_random"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:text="Title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_dec"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_title"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="5dp"
                        android:text="SimpleText is the native text editor for the Apple classic Mac OS.[1] SimpleText allows editing including text formatting (underline, italic, bold, etc.),"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size"
                        android:textStyle="bold" />

                </RelativeLayout>


            </LinearLayout>


        </RelativeLayout>


    </ScrollView>

</FrameLayout>