<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f20"
    tools:context=".fragment.IrregularVerbsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lin_1"
                android:padding="0dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="128dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/categories_background">


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/txt_size_one"
                        android:text="@string/categories"/>







                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/categories_background">




                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_internet"/>






                </LinearLayout>





            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin_2"
                android:layout_below="@id/lin_1"
                android:padding="0dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="128dp">


                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/quizzes_background"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">


                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_man_thinking"/>





                </LinearLayout>




                <LinearLayout
                    android:id="@+id/lin_pharal"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/quizzes_background"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">





                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/txt_size_one"
                        android:text="@string/phrasal"/>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_5"
                android:padding="0dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_below="@id/lin_2"
                android:layout_height="100dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/quizzes_two_background">


                    <!--<android.support.v7.widget.AppCompatImageView
                        android:scaleType="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/ic_internet" />-->




                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/txt_size_one"
                        android:text="@string/quizzes"/>



                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/quizzes_two_background">


                    <!--<android.support.v7.widget.AppCompatImageView
                        android:scaleType="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/ic_internet" />-->

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/ic_target"/>






                </LinearLayout>
            </LinearLayout>



        </RelativeLayout>


    </ScrollView>



</RelativeLayout>